fix for admin publications not showing delete

--- a/paw2018b/frontend/src/css/Publication.css
+++ b/paw2018b/frontend/src/css/Publication.css
@@ -167,6 +167,12 @@ h4 {
 
 .delete-icon {
 	margin-right: -75%;
+	cursor: pointer;
+}
+
+.delete-icon2 {
+	margin-left: 80%;
+	cursor: pointer;
 }
 
 .bigCharacteristic {
